public/assignment/css/style.css
/**********************************************************************************************************************/

/* Glyphicons - admin.html, forms.html, form-fields.html */

.plusicon {
    font-size: 16px;
    color: blue;
}

.okicon {
    font-size: 16px;
    color: green;
}

.removeicon {
    font-size: 16px;
    color: red;
}

.pencilicon {
    font-size: 16px;
    color: yellow;
}

.justifyicon {
    font-size: 16px;
    color: black;
}

/**********************************************************************************************************************/

/* Table*/
/* Table Header - admin.html, forms.html */

.theadrow {
    background-color: #cccccc;
}

/* Table Bordered - admin.html, forms.html */

.table-bordered>tbody>tr>td {
    vertical-align: middle;
}

/**********************************************************************************************************************/

/* Row - form-fields.html */

.fieldrow {
    margin-top: 10px;
}

/**********************************************************************************************************************/

/* Div - forms.html, form-fields.html */

.form-div {
    border: 1px solid #ddd;
}

.form-div-inner {
    margin: 10px;
}

/**********************************************************************************************************************/

/* Navbar */
/* Extra Small Devices */
.navbar-for-xs {
    background-color: #f5f5f5;
}

.div-for-xs-active {
    padding: 10px;
    text-align: center;
    background-color: #428bca;
}

.div-for-xs-active>a:focus, .div-for-xs-active>a:hover {
    text-decoration: none;
}

.div-for-xs {
    padding: 10px;
    text-align: center;
}

.div-for-xs>a:focus, .div-for-xs>a:hover {
    text-decoration: none;
}

.a-for-xs-active {
    color: white;
    text-decoration: none;
}

.a-for-xs {
    color: #428bca;
    text-decoration: none;
}

/**********************************************************************************************************************/

